--- a/The-Single-Responsibility-Principle/java/pom.xml
+++ b/The-Single-Responsibility-Principle/java/pom.xml
@@ -18,13 +18,37 @@
                     <target>1.7</target>
                 </configuration>
             </plugin>
+
+            <plugin>
+                <groupId>org.pitest</groupId>
+                <artifactId>pitest-maven</artifactId>
+                <version>0.29</version>
+                <configuration>
+                    <targetClasses>
+                        <param>com.theladders.solid.srp.ApplicationProcess</param>
+                        <param>com.theladders.solid.srp.ApplyController</param>
+                    </targetClasses>
+                    <targetTests>
+                        <param>com.theladders.solid.srp.TestApplyProcess</param>
+                        <param>com.theladders.solid.srp.TestIt</param>
+                    </targetTests>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>3.8.1</version>
+            <version>4.8.1</version>
         </dependency>
     </dependencies>
+
+
+
+
+
+
 </project>
+
+
